--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -431,7 +431,7 @@
         });
         $('#m29_date_end').datepicker("setDate", new Date());
         $(document).ready(function() {
-            var infoModal = $('#release_serial');
+            var infoModal = $('#release_serialа');
             var table = $('#well_table');
             var trans_type = $('#transaction_action_type');
             var appl_data_arr = {};
